force-app/main/default/objects/LookupRollupSummary__mdt/LookupRollupSummary__mdt.object-meta.xml
<CustomObject>
    <description>This table is the setting to run ProcessLREngineBatch for lookup fields to be rolled up by using Batch Job</description>
    <label>Lookup Rollup Summary</label>
    <pluralLabel>Lookup Rollup Summaries</pluralLabel>
</CustomObject>