force-app/main/default/objects/LookupRollupSummary__mdt/fields/ChildFieldname__c.field-meta.xml
<CustomField>
    <fullName>ChildFieldname__c</fullName>
    <description>The Child Object&apos;s Fieldname for rollup summary</description>
    <label>Child Fieldname</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>