force-app/main/default/objects/LookupRollupSummary__mdt/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <description>The Child Object of the rollup summary</description>
    <label>Child Object</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>