force-app/main/default/objects/LookupRollupSummary__mdt/fields/History_Filter__c.field-meta.xml
<CustomField>
    <fullName>History_Filter__c</fullName>
    <label>History Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>