force-app/main/default/objects/LookupRollupSummary__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The Lookup Rollup Summary settings are active for use or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>