force-app/main/default/objects/LookupRollupSummary__mdt/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <description>The Last_N_Days of the records that were created or deleted for rollup summary</description>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>