force-app/main/default/objects/LookupRollupSummary__mdt/fields/ParentFieldname__c.field-meta.xml
<CustomField>
    <fullName>ParentFieldname__c</fullName>
    <description>The Parent Object&apos;s Fieldname for rollup summary</description>
    <label>Parent Fieldname</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>