force-app/main/default/objects/LookupRollupSummary__mdt/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <description>The Parent Object of the rollup summary</description>
    <label>Parent Object</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>