force-app/main/default/objects/LookupRollupSummary__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The query to process specific criteria for the lookup summary. WHERE clause in SOQL</description>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>