force-app/main/default/objects/LookupRollupSummary__mdt/fields/RollupFieldname__c.field-meta.xml
<CustomField>
    <fullName>RollupFieldname__c</fullName>
    <description>The fieldname of the child object that will be referred for rollup operation</description>
    <label>Rollup Fieldname</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>