force-app/main/default/objects/LookupRollupSummary__mdt/fields/RollupOperation__c.field-meta.xml
<CustomField>
    <fullName>RollupOperation__c</fullName>
    <description>The rollup operation that will be done based on the parent and child object</description>
    <label>Rollup Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
                <default>true</default>
                <label>Sum</label>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Count_Distinct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>