force-app/main/default/objects/LookupRollupSummary__mdt/listViews/View_Lookup_Rollup_Summary.listView-meta.xml
<ListView>
    <fullName>View_Lookup_Rollup_Summary</fullName>
    <columns>MasterLabel</columns>
    <columns>ParentObject__c</columns>
    <columns>ParentFieldname__c</columns>
    <columns>ChildObject__c</columns>
    <columns>ChildFieldname__c</columns>
    <columns>RollupFieldname__c</columns>
    <columns>RollupOperation__c</columns>
    <columns>Query__c</columns>
    <columns>No_of_Days__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>View Lookup Rollup Summary</label>
    <language>en_US</language>
</ListView>